# avo-assesment

./: .env.local  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
api/user/v1/: users.py
app/: database.py  db.py  main.py  pdf_generator.py  redis_cache.py
app/core/: config.py
app/core/helpers/: cache.py  logging.py  pdf_generator.py  redis_cache.py
app/models/: employer.py  users.py
app/schemas/: register_payload.py
migrations/: README  env.py
migrations/versions/: 66f961b0b26c_employer_init.py
