[tool.poetry]
name = "interview_1"
version = "0.1.0"
description = ""
authors = ["Rodger Francis <rodger@avochoc.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.67.0"
alembic = "^1.14.0"
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"
manage-fastapi = "^1.1.1"
uvicorn = "^0.34.0"
python-dotenv = "^1.0.1"
reportlab = "^4.2.5"
weasyprint = "^63.1"
aioredis = "^2.0.1"
fastapi-users = {extras = ["sqlalchemy"], version = "^14.0.0"}
asyncpg = "^0.30.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
